# tpc-track

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
TODO/: README.md  plan.md
TODO/milestones/: 01_geometry_parser.md  02_hit_extraction.md  03_uvw_to_xyz.md  04_reference_check.md  05_single_arg_macro.md  06_plotly_viewer.md  07_line_fit.md  08_polish.md
docs/: manual.md  tpcanalysis_overview.md  verify.md
include/tpctrack/: geometry.hpp  hit.hpp  hit_extraction.hpp  uvw_xyz.hpp
include/upstream/: loadData.hpp
python/: line_fit.py  viewer3d.ipynb  viewer3d.py
python/tests/: test_line_fit.py
scripts/: compare_png.py
src/: hit_extraction.cpp  uvw_xyz.cpp
src/tpctrack/: geometry.cpp  uvw_xyz.cpp
src/upstream/: cleanUVW.cpp  convertUVW_mini.cpp  loadData.cpp
tests/: test_geometry.cpp  test_hit_extraction.cpp  test_uvw_xyz.cpp
tools/: run_mini_main.cpp
tpcanalysis-main/: howto.txt  rootlogon.C  run_mini.cpp  runmacro_mini.cpp  runmacro_mini_cpp.d  runmacro_mini_cpp_ACLiC_dict.cxx  runmacro_mini_cpp_ACLiC_dict_rdict.pcm  runmacro_mini_cpp_ACLiC_linkdef.h  runmacro_mini_cpp_ACLiC_map.in  verify_plot.cpp
tpcanalysis-main/dict/: CMakeLists.txt
